--- a/doc/layouts/partials/head.html
+++ b/doc/layouts/partials/head.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/JsonSchema-Java/css/style.css" type="text/css" media="all" />
-<link rel="stylesheet" href="/JsonSchema-Java/css/syntax.css" type="text/css" media="all" />
-<link rel="icon" href="/JsonSchema-Java/images/favicon.ico">
+<link rel="stylesheet" href="/JSchema-Java/css/style.css" type="text/css" media="all" />
+<link rel="stylesheet" href="/JSchema-Java/css/syntax.css" type="text/css" media="all" />
+<link rel="icon" href="/JSchema-Java/images/favicon.ico">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="/JsonSchema-Java/js/script.js"></script>
+<script src="/JSchema-Java/js/script.js"></script>
