--- a/doc/layouts/partials/header.html
+++ b/doc/layouts/partials/header.html
@@ -9,12 +9,12 @@
                     <span class="menu-icon icon-bar3"></span>
                 </div>
             </label>
-            <a href="https://www.relogiclabs.com"><img src="/JsonSchema-Java/images/logo.svg" alt="Relogic Labs"></a>
+            <a href="https://www.relogiclabs.com"><img src="/JSchema-Java/images/logo.svg" alt="Relogic Labs"></a>
         </div>
         <div class="header-right">
-            <a href="/JsonSchema-Java">Home</a>
-            <a href="/JsonSchema-Java/api/index.html">API Reference</a>
-            <a href="https://github.com/relogiclabs/JsonSchema-Java">GitHub</a>
+            <a href="/JSchema-Java">Home</a>
+            <a href="/JSchema-Java/api/index.html">API Reference</a>
+            <a href="https://github.com/relogiclabs/JSchema-Java">GitHub</a>
         </div>
     </nav>
 </header>
